--- a/package.json
+++ b/package.json
@@ -162,7 +162,8 @@
     "tailwindcss-animate": "^1.0.7",
     "tiptap-markdown": "^0.8.10",
     "use-server": "^0.4.9",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "zod-to-json-schema": "^3.24.5"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.8",
