--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "test:novu-permissions": "node -r dotenv/config scripts/test-novu-connection.js --permissions",
     "test:novu-framework": "node -r dotenv/config scripts/test-novu-framework.js",
     "test:novu-workflow": "node scripts/test-novu-workflow.js",
-    "novu:sync": "npx novu@latest sync --bridge-url $NOVU_BRIDGE_URL --secret-key $NOVU_SECRET_KEY --api-url $NOVU_BASE_URL",
+    "novu:sync": "npx novu@latest sync --bridge-url \"$NOVU_BRIDGE_URL\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"",
     "analyze": "ANALYZE=true pnpm build",
     "analyze:server": "ANALYZE=true BUNDLE_ANALYZE=server pnpm build",
     "analyze:browser": "ANALYZE=true BUNDLE_ANALYZE=browser pnpm build",
