--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "type-check": "tsc --noEmit",
-    "test:email": "node scripts/test-email-templates.js",
+    "test:email": "tsx scripts/test-email-templates.mjs",
     "email:dev": "email dev",
     "email:export": "email export"
   },
