--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "test:novu-framework": "node -r dotenv/config scripts/test-novu-framework.js",
     "test:novu-workflow": "node -r dotenv/config scripts/test-novu-workflow.js",
     "novu:sync": "npx novu@latest sync --bridge-url \"$NOVU_BRIDGE_URL\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"",
+    "novu:clean": "node scripts/clean-novu-workflows.js",
     "analyze": "ANALYZE=true pnpm build",
     "analyze:server": "ANALYZE=true BUNDLE_ANALYZE=server pnpm build",
     "analyze:browser": "ANALYZE=true BUNDLE_ANALYZE=browser pnpm build",
