--- a/package.json
+++ b/package.json
@@ -209,6 +209,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.5.2",
+    "ngrok": "5.0.0-beta.2",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
