--- a/package.json
+++ b/package.json
@@ -113,19 +113,27 @@
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^6.1.0",
     "@tanstack/react-table": "^8.21.3",
-    "@tiptap/extension-bullet-list": "^2.11.7",
-    "@tiptap/extension-highlight": "^2.11.7",
-    "@tiptap/extension-link": "^2.11.7",
-    "@tiptap/extension-list-item": "^2.11.7",
-    "@tiptap/extension-table": "^2.11.7",
-    "@tiptap/extension-table-cell": "^2.11.7",
-    "@tiptap/extension-table-header": "^2.11.7",
-    "@tiptap/extension-table-row": "^2.11.7",
-    "@tiptap/extension-task-item": "^2.11.7",
-    "@tiptap/extension-task-list": "^2.11.7",
-    "@tiptap/pm": "^2.11.7",
-    "@tiptap/react": "^2.11.7",
-    "@tiptap/starter-kit": "^2.11.7",
+    "@tiptap/core": "^3.1.0",
+    "@tiptap/extension-bullet-list": "^3.1.0",
+    "@tiptap/extension-color": "^3.1.0",
+    "@tiptap/extension-highlight": "^3.1.0",
+    "@tiptap/extension-image": "^3.1.0",
+    "@tiptap/extension-link": "^3.1.0",
+    "@tiptap/extension-list-item": "^3.1.0",
+    "@tiptap/extension-placeholder": "^3.1.0",
+    "@tiptap/extension-table": "^3.1.0",
+    "@tiptap/extension-table-cell": "^3.1.0",
+    "@tiptap/extension-table-header": "^3.1.0",
+    "@tiptap/extension-table-row": "^3.1.0",
+    "@tiptap/extension-task-item": "^3.1.0",
+    "@tiptap/extension-task-list": "^3.1.0",
+    "@tiptap/extension-text-align": "^3.1.0",
+    "@tiptap/extension-text-style": "^3.1.0",
+    "@tiptap/extension-typography": "^3.1.0",
+    "@tiptap/extension-underline": "^3.1.0",
+    "@tiptap/pm": "^3.1.0",
+    "@tiptap/react": "^3.1.0",
+    "@tiptap/starter-kit": "^3.1.0",
     "@types/lodash": "^4.17.16",
     "@types/mdx": "^2.0.13",
     "@types/node-cron": "^3.0.11",
