--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "test:novu-framework": "node -r dotenv/config scripts/test-novu-framework.js",
     "test:novu-workflow": "node -r dotenv/config scripts/test-novu-workflow.js",
     "novu:sync": "npx novu@latest sync --bridge-url \"$NOVU_BRIDGE_URL\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"",
-    "novu:sync:dev": "node -r dotenv/config node_modules/.bin/novu sync --bridge-url \"http://localhost:3000/api/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"",
-    "novu:sync:prod": "bash -c 'source .env && NOVU_SECRET_KEY=\"$NOVU_SECRET_KEY_PROD\" npx novu@latest sync --bridge-url \"https://eleva.care/api/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
-    "novu:sync:preview": "node -r dotenv/config node_modules/.bin/novu sync --bridge-url \"$VERCEL_PREVIEW_URL/api/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"",
+    "novu:sync:dev": "bash -c 'source .env && npx novu@latest sync --bridge-url \"http://localhost:3000/api/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
+    "novu:sync:prod": "bash -c 'source .env && npx novu@latest sync --bridge-url \"https://eleva.care/api/novu\" --secret-key \"$NOVU_SECRET_KEY_PROD\" --api-url \"$NOVU_BASE_URL\"'",
+    "novu:sync:preview": "bash -c 'source .env && npx novu@latest sync --bridge-url \"$VERCEL_PREVIEW_URL/api/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
     "novu:clean": "node scripts/clean-novu-workflows.js",
     "test:workflows": "node -r dotenv/config scripts/test-novu-workflows-with-data.js",
     "analyze": "ANALYZE=true pnpm build",
