--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "test:novu-framework": "node -r dotenv/config scripts/test-novu-framework.js",
     "test:novu-workflow": "node -r dotenv/config scripts/test-novu-workflow.js",
     "novu:sync": "npx novu@latest sync --bridge-url \"$NOVU_BRIDGE_URL\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"",
-    "novu:sync:dev": "bash -c 'source .env && npx novu@latest sync --bridge-url \"http://localhost:3000/api/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
+    "novu:sync:dev": "bash -c 'source .env && npx novu@latest sync --bridge-url \"$NGROK_URL/api/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
+    "novu:sync:dev:auto": "bash -c 'NGROK_URL=$(curl -s http://localhost:4040/api/tunnels | jq -r \".tunnels[0].public_url\" 2>/dev/null || echo \"http://localhost:3000\") && source .env && npx novu@latest sync --bridge-url \"$NGROK_URL/api/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
+    "novu:dev:sync": "node scripts/novu-dev-sync.js",
     "novu:sync:prod": "bash -c 'source .env && npx novu@latest sync --bridge-url \"https://eleva.care/api/novu\" --secret-key \"$NOVU_SECRET_KEY_PROD\" --api-url \"$NOVU_BASE_URL\"'",
     "novu:sync:preview": "bash -c 'source .env && npx novu@latest sync --bridge-url \"$VERCEL_PREVIEW_URL/api/novu\" --secret-key \"$NOVU_SECRET_KEY\" --api-url \"$NOVU_BASE_URL\"'",
     "novu:clean": "node scripts/clean-novu-workflows.js",
