--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "globals": "^15.15.0",
     "googleapis": "^144.0.0",
+    "lenis": "^1.3.8",
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
     "motion": "^12.9.2",
