--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "@types/node-cron": "^3.0.11",
     "@upstash/qstash": "^2.7.23",
     "@upstash/redis": "^1.34.8",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^0.27.3",
     "@vercel/speed-insights": "^1.2.0",
     "@xstate/react": "^5.0.3",
